# main

./: .gitignore  .gitmodules  Vagrantfile  bootstrap.sh
CProjects/OStep/: .gitignore  CMakeLists.txt
CProjects/OStep/src/: cpu2.1.c
CProjects/lcthw/: Makefile  ex10.c  ex13.c  ex15.c  ex17.c  ex3.c  ex4.c  ex6.c  ex8.c
HaskellProjects/: .gitignore
HaskellProjects/FP101x/: test.hs
JavaProjects/UCSDUnfoldingMaps/src/module1/: HelloWorld.java
JavaProjects/UCSDUnfoldingMaps/src/module3/: EarthquakeCityMap.java
LendingClub/: prompt.txt
LendingClub/code/rawcode/: .Rhistory  LendingClubRaw.Rmd
LendingClub/data/: loansData.rda
NodeJS/kanban-app-jspm/: .gitignore  config.js  index.html  package.json  tsconfig.json  tsd.json
NodeJS/kanban-app-jspm/app/ts/: index.tsx
NodeJS/kanban_app/: package.json  webpack.config.js
NodeJS/kanban_app/app/: component.js
NodeJSProjects/react-ts-jspm/: .gitignore  config.js  index.html  package.json  tsconfig.json  tsd.json
NodeJSProjects/react-ts-jspm/typings/: tsd.d.ts
RProjects/: .gitignore
RustProjects/hello_world/: Cargo.toml  main
clojure_projs/my-proj/: project.clj
clojure_projs/prequel/: README.md  project.clj  test.yaml
clojure_projs/prequel/doc/: intro.md
clojure_projs/sicp/: 1.01.rkt  1.02.rkt  1.03.rkt  1.10.rkt  1.11.rkt  1.12.rkt  1.14.rkt  1.7a.rkt  1.7a.rkt~  1.7b.rkt  Untitled.rkt
lcthw/: Vagrantfile  bootstrap.sh  ex1.c  ex11.c  ex13.c  ex14.c  ex16.c  ex16hw.c  ex17  ex17.c  ex17hw.c  ex4.c  ex5.c  ex7.c  ex8.c  ex9.c
tex_trial/: template copy.tex  test.tex
vagrant_image/: Vagrantfile
(+31 files in other folders)
